--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-  "extends": ["react-app", "airbnb"]
+  "extends": ["react-app", "airbnb"],
+  "overrides": [
+    {
+      "files": ["src/**/*.jsx"],
+      "rules": {
+        "react/forbid-prop-types": 0,
+        "react/jsx-props-no-spreading": "off"
+      }
+    }
+  ]
 }
