--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
       "rules": {
         "react/forbid-prop-types": 0,
         "react/jsx-props-no-spreading": "off",
-        "default-param-last": 0
+        "default-param-last": 0,
+        "no-param-reassign": 0
       }
     }
   ],
