--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
         "react/forbid-prop-types": 0,
         "react/jsx-props-no-spreading": "off",
         "default-param-last": 0,
-        "no-param-reassign": 0
+        "no-param-reassign": 0,
+        "no-shadow": "off"
       }
     }
   ],
